# fuller

./: .clone.gitignore  .gitignore  BRIEF.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  pyproject.toml
docs/: BRIEF_rule_extraction.md  CR_denoise_atom_env.md  CR_karva_target_head_length.md  CR_lattice_extensions.md  CR_snap_karva.md  CR_visit_subtree_instrumentation.md  PHYSICS_MUTATE_API.md  USAGE.md  physics_prior_rules.md
examples/: 00_calibration.rs  snapdbg.rs
examples/bf_bloat/: RESULTS.md  main.rs  results.jsonl
examples/bf_hff_study/: RESULTS_HFF.md  main.rs  results_hff.jsonl
examples/bf_study/: MECHANISM.md  RESULTS.md  main.rs  results.jsonl
notebooks/: eclass_tournament.py
nucleotable/: README_nucleotable.md
nucleotable/db/: kingdoms.py  nlp_english_kingdom.sql  schema.py
nucleotable/docs/: DataModel.md  EvolutionSQL.md  GeneFrameDesign.md  KingdomMatrix.md
papers/: HFF_Heterogeneous_Tournaments.tex
parity/: constants_lattice.json  gen_constants.py  gen_corpus.py  label_corpus.py
parity/corpus/: powsimp.jsonl  radsimp.jsonl  ratsimp.jsonl  simplify.jsonl  trigsimp.jsonl
python/fuller/: __init__.py  sympy_bridge.py
python/gamakAST/: __init__.py  sympy_bridge.py
reports/: environment.md
src/: calibration.rs  eval.rs  expr.rs  extract.rs  geneframe.rs  karva.rs  lib.rs  parity.rs  physics.rs  python.rs  score.rs  snap.rs  snap_karva.rs
src/bf/: eval.rs  expr.rs  extract.rs  mod.rs  parse.rs  ruleset.rs
src/ruleset/: distribute.rs  identities.rs  mod.rs  powers.rs  rational.rs  sympy_mined.rs  trig.rs  trig_fu.rs  wide.rs
stale/: BRIEF.md  BRIEF_rule_extraction.md  README.md  seed_identities_algebra.md
vendor-egglog/: Cargo.toml
vendor-egglog/src/: extract.rs
