[package]
name = "fuller"
version = "0.1.0"
edition = "2021"
description = "Egglog-based bidirectional AST hub for symbolic expression rewriting"
license = "MIT"

[lib]
name = "fuller"
# rlib for Rust tests/examples; cdylib for the PyO3 extension module.
crate-type = ["rlib", "cdylib"]

[dependencies]
# Vendored egglog: our fork replaces the scalar Bellman-Ford extractor with the
# HFF angular multi-objective extractor (see vendor-egglog/src/extract.rs).
# The BF module compiles against the fork too (Extractor/TreeAdditiveCostModel
# are present in vendor-egglog) — do NOT pin crates.io egglog here.
egglog = { path = "vendor-egglog" }
rayon = "1.10"
# HFF math (TrueNorth angle + CDF correction) for the angular extraction cost
# model AND the BF study fitness. default-features=false drops HFF's PyO3
# layer — we use only the pure math in hff_core::core_functions / ::higd.
hff = { path = "../hff", default-features = false }
# Used to hand an objective vector to hff_core's TrueNorth (matches hff's 0.15).
ndarray = "0.15"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]
optional = true

[features]
# `python` builds the PyO3 extension module; off by default so plain
# `cargo build` / `cargo test` / examples never need the Python link env.
default = []
python = ["dep:pyo3"]

[[example]]
name = "00_calibration"

[[example]]
name = "bf_bloat_study"
path = "examples/bf_bloat/main.rs"

[[example]]
name = "bf_study"
path = "examples/bf_study/main.rs"

[[example]]
name = "bf_hff_study"
path = "examples/bf_hff_study/main.rs"
